syntax = "proto3";
package accounts;

message Empty {}

message Invoice {
  int64 id = 1;
  string name = 2;
  double ammount = 3;
  bool paid = 4;
}

service Accounts {
  rpc PayInvoice(Invoice) returns (Invoice);
}
